[project]
name = "cutler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "cityscapesscripts",
    "colored>=1.4.4",
    "faiss-cpu>=1.8.0.post1",
    "fvcore>=0.1.5.post20221221",
    "gdown>=5.2.0",
    "opencv-python>=4.11.0.86",
    "panopticapi",
    "pydensecrf",
    "detectron2",
    "pyyaml>=6.0.2",
    "scikit-image>=0.21.0",
    "scikit-learn>=1.3.2",
    "shapely>=2.0.6",
    # "timm>=1.0.13",
    # "torch>=2.5.1",
    # "torchaudio>=2.5.1",
    # "torchvision>=0.20.1",
    "pandas>=2.0.3",
]

[tool.uv]
no-build-isolation-package = ["detectron2"]

[tool.uv.sources]
pydensecrf = { git = "https://github.com/lucasb-eyer/pydensecrf.git" }
detectron2 = { git = "https://github.com/facebookresearch/detectron2.git"}
panopticapi = { git = "https://github.com/cocodataset/panopticapi.git" }
cityscapesscripts = { git = "https://github.com/mcordts/cityscapesScripts.git" }
